[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/MageEnemy.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.231373, 0.054902, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.231373, 0.054902, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.231373, 0.054902, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[node name="MageEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )
hp = 8

[node name="Sprite" parent="." index="2"]
region_rect = Rect2( 384, 0, 16, 16 )

[node name="AnimationPlayer" parent="." index="3"]
anims/attack = SubResource( 1 )

[node name="PlayerCloseArea" type="Area2D" parent="." index="9"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCloseArea" index="0"]
shape = SubResource( 2 )
[connection signal="body_exited" from="AgroArea" to="." method="_on_AgroArea_body_exited"]
[connection signal="body_entered" from="PlayerCloseArea" to="." method="_on_PlayerCloseArea_body_entered"]
[connection signal="body_exited" from="PlayerCloseArea" to="." method="_on_PlayerCloseArea_body_exited"]
